[gd_scene load_steps=5 format=3 uid="uid://cbtb4la8awb2d"]

[ext_resource type="Script" path="res://collapsable_platform.gd" id="1_xuxg6"]
[ext_resource type="Texture2D" uid="uid://8idkwq1x8ac6" path="res://assets/collapsePlatform.png" id="2_odfqu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wswju"]
size = Vector2(64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndw3j"]
size = Vector2(64, 16)

[node name="Platform" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_xuxg6")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("2_odfqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wswju")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ndw3j")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_regenerate_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
